--- a/app/src/main/res/layout/activity_doctor_detail.xml
+++ b/app/src/main/res/layout/activity_doctor_detail.xml
@@ -42,14 +42,15 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
+                    android:text="Detail Veneritarian"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Info Lengkap Veneritarian" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -115,7 +116,7 @@
                         android:layout_height="wrap_content">
 
                         <TextView
-                            android:id="@+id/price"
+                            android:id="@+id/rating"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
@@ -144,66 +145,193 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
+                    style="@style/poppinsBold16spBlack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Nama"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="70dp"
+                    android:text="Nama Dokter"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
                 <TextView
                     android:id="@+id/name"
+                    style="@style/poppinsReg16spBlack"
                     android:layout_marginTop="4dp"
+                    android:layout_marginStart="70dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="apa"
+                    android:text="Drh. Aji Kusuma"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
+                <ImageView
+                    android:id="@+id/Garis2"
+                    android:src="@drawable/img_1"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="300dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
+                    style="@style/poppinsBold16spBlack"
                     android:layout_marginTop="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Instansi"
                     android:textColor="@color/black"
                     android:textSize="18sp"
+                    android:layout_marginStart="70dp"
                     android:textStyle="bold"/>
                 <TextView
+                    style="@style/poppinsReg16spBlack"
                     android:id="@+id/instance"
                     android:layout_marginTop="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="apa"
+                    android:layout_marginStart="70dp"
+                    android:text="Puskeswan Depok"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
+                <ImageView
+                    android:id="@+id/Garis3"
+                    android:src="@drawable/img_1"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="300dp"
+                    android:layout_marginStart="70dp"
+                    android:layout_height="wrap_content"/>
 
                 <TextView
+                    style="@style/poppinsBold16spBlack"
                     android:layout_marginTop="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Jam Operasional"
                     android:textColor="@color/black"
                     android:textSize="18sp"
+                    android:layout_marginStart="70dp"
                     android:textStyle="bold"/>
                 <TextView
+                    style="@style/poppinsReg16spBlack"
                     android:id="@+id/schedule"
                     android:layout_marginTop="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="apa"
+                    android:text="Senin - Jumat . 08.00 - 17.00"
                     android:textColor="@color/black"
+                    android:layout_marginStart="70dp"
                     android:textSize="16sp" />
+                <ImageView
+                    android:id="@+id/Garis4"
+                    android:src="@drawable/img_1"
+                    android:layout_marginTop="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
 
-                <Button
-                    android:id="@+id/bt_consultation"
-                    android:layout_width="350dp"
-                    android:layout_height="60dp"
-                    android:textSize="20sp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="48dp"
-                    android:backgroundTint="#F28705"
-                    android:text="Konsultasi"
-                    android:textColor="@color/white" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="170dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/base_card"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/konsul_chat"
+                        style="@style/poppinsBold16spBlack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Konsultasi Melalui Chat"
+                        android:textSize="20sp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Rp130.000"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="10dp"
+                        style="@style/poppinsBold16spBlack" />
+
+                    <TextView
+                        android:id="@+id/duration"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="40 Menit"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginEnd="10dp"
+                        android:textAlignment="viewEnd"/>
+
+                    <Button
+                        android:id="@+id/bt_consultation"
+                        android:layout_width="200dp"
+                        android:layout_height="50dp"
+                        android:textSize="16sp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:backgroundTint="#F28705"
+                        android:text="Mulai Konsultasi"
+                        android:layout_marginBottom="16dp"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="170dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/base_card"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/konsul_chat2"
+                        style="@style/poppinsBold16spBlack"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Konsultasi Melalui Video Call"
+                        android:textSize="20sp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/price2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Rp150.000"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="10dp"
+                        style="@style/poppinsBold16spBlack" />
+
+                    <TextView
+                        android:id="@+id/duration2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="30 Menit"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:layout_marginEnd="10dp"
+                        android:textAlignment="viewEnd"/>
+
+                    <Button
+                        android:id="@+id/bt_consultation2"
+                        android:layout_width="200dp"
+                        android:layout_height="50dp"
+                        android:textSize="16sp"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="10dp"
+                        android:backgroundTint="#F28705"
+                        android:layout_marginBottom="10dp"
+                        android:text="Mulai Konsultasi"
+                        android:textColor="@color/white" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
