--- a/app/src/main/res/layout/activity_pembayaran_chat.xml
+++ b/app/src/main/res/layout/activity_pembayaran_chat.xml
@@ -44,14 +44,15 @@
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
+                    android:textStyle="bold"
+                    android:text="Payment" />
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Lakukan Pembayaran" />
             </LinearLayout>
         </RelativeLayout>
 
